--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.87.1",
     "@tanstack/react-query": "^5.90.12",
+    "@xstate/react": "^6.0.0",
+    "immer": "^11.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
+    "xstate": "^5.25.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
